layout bugifx

--- a/app/public/css/common/ui.less
+++ b/app/public/css/common/ui.less
@@ -265,3 +265,9 @@ form .add-on {
   width:120px;
   height:100px;
 }
+
+.alert-warning {
+  background-color: @warningBackground;
+  border-color:@warningBorder;
+  color: @warningText;
+}
